vlib/v/checker/tests/enum_from_string_args_err.vv
enum Color {
	red
	green
	blue
}

fn main() {
	Color.from_string()
	Color.from_string('red', 'blue')
	Color.from_string(22)
	Color.from_string(22.22)
	Color.from_string(true)
}
